# theDRLbook

./: README.md  gamma_dropped_batch_norm_rtg_reinforce_colab.ipynb  gamma_dropped_rtg_reinforce_colab.ipynb  gradient_ascent_numpy.ipynb  gradient_ascent_pytorch.ipynb
.githooks/: post-commit
test_environments/platform_lander/: MANIFEST.in  README.md  average_reinforcement_baseline_reinforce.py_deleted.py  batch_reinforce.py_deleted.py  batch_rtg_reinforce.py  booster_landing_stages.py  full_reinforce.py_deleted.py  gamma_dropped_batch_rtg_reinforce.py  gamma_dropped_rtg_reinforce.py  gamma_dropped_rtg_reinforce_colab.ipynb  gamma_dropped_value_function_baseline_reinforce.py  make_gamma_dropped_policy_video.py  plot_reinforce_results.py  pyproject.toml  rtg_reinforce.py  search_gamma_dropped_rtg_hyperparams.py  value_function_baseline_reinforce.py  vanilla_reinforce.py  watch_gamma_dropped_batch_rtg_policy.py  watch_gamma_dropped_rtg_policy.py  watch_trained_policy.py
test_environments/platform_lander/examples/: demo.py
test_environments/platform_lander/src/platform_lander/: __init__.py  core.py  platform_lander.py  spaces.py
test_environments/platform_lander/tests/: test_platform_lander.py
